# SummerTimer

./: CMakeLists.txt  README.md  Summer.sln  vcpkg.json
SummerTimer/: SummerTimer.cpp  SummerTimer.vcxproj  SummerTimer.vcxproj.filters  icon.h
SummerTimer/Debug/: SummerTimer.exe.recipe  SummerTimer.ilk  vc142.idb
SummerTimer/Debug/SummerTimer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SummerTimer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SummerTimer/Release/: SummerTimer.exe.recipe  SummerTimer.iobj  SummerTimer.ipdb
SummerTimer/Release/SummerTimer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SummerTimer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: main.cpp
